--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html>  
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,19 +39,19 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Category</a>
+        <a class="nav-link" href="#banner2">Category</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Shop</a>
+        <a class="nav-link" href="#product-cards">Shop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#about">About Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="#contact">Contact Us</a>
       </li>
     </ul>
     
@@ -868,7 +868,7 @@
                 &copy; Copyright <strong><span>Online Shop</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-                Designed by <a href="https://jayant005.github.io/My_resume_profile/">JK_Tech</a>
+                Designed by <a  href="https://jayant005.github.io/My_resume_profile/">JK_Tech</a>
             </div>
         </div>
         </footer>
